@@ -98,8 +98,10 @@ class ArticlesContainerUpdateManagerController extends ResourceUpdateManagerCont
      */
     public function prepareResource() {
         $settings = $this->resource->get('articles_container_settings');
-        foreach ($settings as $k => $v) {
-            $this->resourceArray['setting_'.$k] = $v;
+        if (is_array($settings) && !empty($settings)) {
+            foreach ($settings as $k => $v) {
+                $this->resourceArray['setting_'.$k] = $v;
+            }
         }
     }
 }
